@@ -26,4 +26,3 @@ auto-learn level, chatlog or not, bot get angry or not, config_path ).
 FourDollars
 -----
 1. cancel the selected region when any key event
-2. vi moving option
